Bug 68319 - Chinese Conversion Crashes
Summary: Chinese Conversion Crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords: regression
: 68227 69392 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-20 09:41 UTC by Kumāra
Modified: 2013-09-16 10:43 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
console + bt with symbols on master sources (8.36 KB, text/plain)
2013-08-23 04:41 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kumāra 2013-08-20 09:41:52 UTC
Something went wrong with the modified Chinese Conversion tool.

Paste this on a new doc: 出離, 出要, 遠離
Use the tool to convert from Traditional to Simplified.
CRASH!
Upon recovery, one character is converted: the first 離 to 离
The other 離 remains as it was.

Upon further testing, I found out that if I were to highlight just the Chinese character before running the tool, it works find.

With more testing, here's what I notice:
If the range of conversion includes any non-Chinese character, in this case, comma or space, upon reaching that character, CRASH!
Comment 1 Thomas van der Meulen [retired] 2013-08-22 17:29:49 UTC
Thank you for your bug report, I CAN'T reproduce this bug running Version: 4.1.1.2
Build ID: 7e4286b58adc75a14f6d83f53a03b6c11fa2903 on Mac osx 10.8.4.
Comment 2 Kumāra 2013-08-23 03:26:39 UTC
Thanks. I see that 4.1.1.2 is not even available in the dropdown list for Version.
Are you sure you got the number right?
Comment 3 Julien Nabet 2013-08-23 04:41:15 UTC
Created attachment 84491 [details]
console + bt with symbols on master sources

On pc Debian x86-64 with master sources updated yesterday + brand new LO profile, I reproduced the crash.
I attached console logs and bt.
Comment 4 Julien Nabet 2013-08-23 04:47:16 UTC
Oups, I forget this trace too:
warn:legacy.osl:5804:1:sw/source/core/edit/edattr.cxx:586: Index outside the range - endless loop!

Cédric/Michael: one for you?
Comment 5 Julien Nabet 2013-08-23 04:51:06 UTC
With 4.0 sources updated 1 week ago, no crash
With 4.1 sources updated 1 week ago, crash too.
Comment 6 Thomas van der Meulen [retired] 2013-08-23 09:35:20 UTC
*** Bug 68227 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2013-08-23 23:21:44 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b28b6cc6116856246ad2f339f5e6fb753197781

fdo#68319: sw: fix Chinese Conversion



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2013-08-23 23:24:14 UTC
regression in 4.1 from my OUString conversion of SwTxtNode::GetTxt()
commit 0295c8a34e39326414c1b98cf4da905802f061b0
Comment 9 Commit Notification 2013-08-24 04:34:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e680d71b75f18be9b99b13a3a2f63e5f54e42d3f&h=libreoffice-4-1

fdo#68319: sw: fix Chinese Conversion


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Stahl 2013-09-16 10:43:35 UTC
*** Bug 69392 has been marked as a duplicate of this bug. ***