fdo#68319: sw: fix Chinese Conversion

... and perhaps other things too: the SwScriptIterator constructor gets
passed a temporary String created by implicit conversion from OUString
and retains a reference to that; convert the thing to use OUString
(and adapt some sCleanStr too not to get the inverse problem...).

(regression from 0295c8a34e39326414c1b98cf4da905802f061b0)

Change-Id: I038ad0734385cdcae99ec404153f51ee427c7c64